--- a/.gitmodules
+++ b/.gitmodules
@@ -55,9 +55,6 @@
 [submodule "skins/cc"]
 	path = skins/cc
 	url = git://code.creativecommons.org/themes/cc_wiki.git
-[submodule "extensions/HeaderTabs"]
-	path = extensions/HeaderTabs
-	url = git://code.creativecommons.org/mw-ext/headertabs.git
 [submodule "extensions/AbuseFilter"]
 	path = extensions/AbuseFilter
 	url = git://code.creativecommons.org/mw-ext/abusefilter.git
@@ -85,3 +82,6 @@
 [submodule "extensions/Validator.git"]
 	path = extensions/Validator.git
 	url = git://code.creativecommons.org/mw-ext/validator.git
+[submodule "extensions/HeaderTabs.git"]
+	path = extensions/HeaderTabs.git
+	url = git://code.creativecommons.org/mw-ext/headertabs.git
